--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -3,6 +3,7 @@ CONFIG_ZMK_KEYBOARD_NAME="roBa"
 CONFIG_ZMK_MOUSE=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
 
 
